--- a/index.html
+++ b/index.html
@@ -20,6 +20,32 @@
 <body>
     <div class="container-fluid">
         <div class="row">
+            <div class="nav">
+               <div class="container">
+                   <div class="row p-3">
+                    <div class="col-lg-3 col-12 logosec">
+                     <div class="logo">
+                        <img src="./images/fav.png" alt="">
+                        <h5>Digital.com</h5>
+                     </div>
+                     <i class="fa fa-bars" id="bar"></i>
+                    </div>
+                    <div class="col-lg-9 col-12 navlinksec">
+                        <ul>
+                            <li><a href="#Home">Home</a></li>
+                            <li><a href="#About">About</a></li>
+                            <li><a href="#Service">Serivces</a></li>
+                            <li><a href="#Gallery">Gallery</a></li>
+                            <li><a href="#Team">Team</a></li>
+                            <li><a href="#Blog">Blog</a></li>
+                            <li><a href="#Contact">Contact us</a></li>
+                        </ul>
+                    </div>
+                   </div>
+               </div>
+            </div>
+        </div>
+        <div class="row" id="Home">
             <div class="col-12 home-banner">
                 <div class="col-12 home-banner-text">
                     <h6>we work hard, we result perfect</h6>
@@ -31,6 +57,7 @@
                 </div>
             </div>
         </div>
+        <div class="mt-5 space mb-5" id="About"></div>
         <section id="about">
             <div class="container">
                 <div class="row ">
@@ -86,6 +113,7 @@
                 </div>
             </div>
         </section>
+        <div class="mt-5 mb-5 space"  id="Service"></div>
         <div class="row">
             <section id="services">
                 <div class="container">
@@ -150,6 +178,7 @@
                 </div>
             </section>
         </div>
+        <div class="mt-5 mb-5 space" id="Team"></div>
         <div class="row">
             <section id="team">
                 <div class="container">
@@ -207,6 +236,7 @@
                 </div>
             </section>
         </div>
+        <div class="mt-5 mb-5 space" id="Gallery"></div>
         <div class="row">
             <section id="gallery">
                 <div class="row mb-5">
@@ -243,6 +273,7 @@
             <div class="col-md-6 col-12 ad-img">
             </div>
         </div>
+        <div class="mt-5 mb-5" style="height: 5vh;" id="Blog"></div>
         <div class="row">
             <section id="blog">
                 <div class="container">
@@ -317,7 +348,7 @@
                 </div>
             </section>
         </div>
-
+        <div class="mt-5 mb-5 space" id="Contact"></div>
         <div class="row mb-5">
             <section id="blog">
                 <div class="container">
@@ -451,11 +482,13 @@
         </footer>
        </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
         <script src="./vanillatilt.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
