--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 </head>
 
 <body>
+  <div class="container-fluid">
+    <div class="row">
+        <div class="loader">
+          <img src="./images/fav.png" loading="lazy" alt="logo">
+        </div>
+    </div>
+  </div>
     <div class="container-fluid">
         <div class="row">
             <div class="nav">
@@ -45,6 +52,7 @@
                </div>
             </div>
         </div>
+
         <div class="row" id="Home">
             <div class="col-12 home-banner">
                 <div class="col-12 home-banner-text">
