--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!--Bootstrap CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
 
@@ -58,10 +59,7 @@
                 <div class="col-12 home-banner-text">
                     <h6>we work hard, we result perfect</h6>
                     <h2>crafting digital Agency experience</h2>
-
                     <button class="round-btn home-btn">explore us</button>
-
-
                 </div>
             </div>
         </div>
@@ -129,8 +127,7 @@
                         <div class="col-lg-6 col-sm-10 col-12  mx-auto about-text">
                             <p class="mt-5">Why Choose us ?</p>
                             <div class="line"></div>
-                            <h2 class="mt-4"><b>We ensure perfect quality Digital
-                                    products for you</b></h2>
+                            <h2 class="mt-4"><b>We ensure perfect quality Digital products for you</b></h2>
                         </div>
                     </div>
                     <div class="row mt-5 mb-5">
@@ -143,7 +140,6 @@
                                     <div class="card-body">
                                         <h6 class="card-title">Unique Design</h6>
                                         <p class="card-text text-muted">Most people who work in an office environment, buy computer products, or have</p>
-                                       
                                     </div>
                                 </div>
                             </div>
@@ -200,7 +196,7 @@
                     </div>
                     <div class="row mt-5 mb-5">
                         <div class="col-12  team-cards">
-                            <div class="col-lg-3 col-sm-6 col-12 mx-auto p-2">
+                            <div class="col-lg-3 col-sm-6 col-12 mx-auto p-2" data-aos="fade-up">
                                 <div class="card">
                                     <img src="./images/t1.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -210,18 +206,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6 col-12 p-2">
+                            <div class="col-lg-3 col-sm-6 col-12 p-2" data-aos="fade-up">
                                 <div class="card">
                                     <img src="./images/t2.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h6 class="card-title">ETHEL DAVIS
-                                            </h6>
+                                        <h6 class="card-title">ETHEL DAVIS</h6>
                                         <p class="card-text text-muted">Managing Director (Sales)</p>
                                         
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6 col-12 p-2">
+                            <div class="col-lg-3 col-sm-6 col-12 p-2" data-aos="fade-up">
                                 <div class="card" >
                                     <img src="./images/t3.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -230,7 +225,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6 col-12 p-2">
+                            <div class="col-lg-3 col-sm-6 col-12 p-2" data-aos="fade-up">
                                 <div class="card" >
                                     <img src="./images/t4.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -256,14 +251,94 @@
                     </div>
                 </div>
                <div class="row mb-5">
-                        <div class="gallery g1 col-lg-5 col-sm-6 col-12"></div>
-                        <div class="gallery g2 col-lg-4 col-sm-6 col-12"></div>
-                        <div class="gallery g3 col-lg-3 col-sm-6 col-12"></div>
-                        <div class="gallery g4 col-lg-6 col-sm-6 col-12"></div>
-                        <div class="gallery g5 col-lg-3 col-sm-6 col-12"></div>
-                        <div class="gallery g6 col-lg-3 col-sm-6 col-12"></div>
-                        <div class="gallery g7 col-lg-4 col-sm-6 col-12"></div>
-                        <div class="gallery g8 col-lg-8 col-sm-6 col-12"></div>
+                        <div class="gallery g1 col-lg-5 col-sm-6 col-12" data-aos="zoom-in">
+                            <div class="row layer">
+                                <div class="col-12 layerdata">
+                                        <div class="col-8 mx-auto">
+                                            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio esse molestias sint soluta.</p>
+                                            <hr>
+                                            <h6 class="text-center"><b>OUR OFFICE</b></h6>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery g2 col-lg-4 col-sm-6 col-12" data-aos="zoom-in">
+                            <div class="row layer">
+                                <div class="col-12 layerdata">
+                                        <div class="col-8 mx-auto">
+                                            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio esse molestias sint soluta.</p>
+                                            <hr>
+                                            <h6 class="text-center"><b>OUR OFFICE</b></h6>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery g3 col-lg-3 col-sm-6 col-12" data-aos="zoom-in">
+                             <div class="row layer">
+                                <div class="col-12 layerdata">
+                                        <div class="col-8 mx-auto">
+                                            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio esse molestias sint soluta.</p>
+                                            <hr>
+                                            <h6 class="text-center"><b>OUR OFFICE</b></h6>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery g4 col-lg-6 col-sm-6 col-12" data-aos="zoom-in">
+                             <div class="row layer">
+                                <div class="col-12 layerdata">
+                                        <div class="col-8 mx-auto">
+                                            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio esse molestias sint soluta.</p>
+                                            <hr>
+                                            <h6 class="text-center"><b>OUR OFFICE</b></h6>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery g5 col-lg-3 col-sm-6 col-12" data-aos="zoom-in">
+                             <div class="row layer">
+                                <div class="col-12 layerdata">
+                                        <div class="col-8 mx-auto">
+                                            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio esse molestias sint soluta.</p>
+                                            <hr>
+                                            <h6 class="text-center"><b>OUR OFFICE</b></h6>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery g6 col-lg-3 col-sm-6 col-12" data-aos="zoom-in">
+                             <div class="row layer">
+                                <div class="col-12 layerdata">
+                                        <div class="col-8 mx-auto">
+                                            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio esse molestias sint soluta.</p>
+                                            <hr>
+                                            <h6 class="text-center"><b>OUR OFFICE</b></h6>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery g7 col-lg-4 col-sm-6 col-12" data-aos="zoom-in">
+                             <div class="row layer">
+                                <div class="col-12 layerdata">
+                                        <div class="col-8 mx-auto">
+                                            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio esse molestias sint soluta.</p>
+                                            <hr>
+                                            <h6 class="text-center"><b>OUR OFFICE</b></h6>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery g8 col-lg-8 col-sm-6 col-12" data-aos="zoom-in">
+                             <div class="row layer">
+                                <div class="col-12 layerdata">
+                                        <div class="col-8 mx-auto">
+                                            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio esse molestias sint soluta.</p>
+                                            <hr>
+                                            <h6 class="text-center"><b>OUR OFFICE</b></h6>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
 
                    </div>
                 </section>
@@ -295,7 +370,7 @@
                     </div>
                     <div class="row mt-5 mb-5">
                         <div class="col-12  blog-cards">
-                            <div class="col-lg-3 col-sm-6 col-12 mx-auto p-2">
+                            <div class="col-lg-3 col-sm-6 col-12 mx-auto p-2" data-aos="zoom-out-down">
                                 <div class="card">
                                     <img src="images/p1.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -310,7 +385,7 @@
                                     </div>
                                   </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6 col-12 p-2">
+                            <div class="col-lg-3 col-sm-6 col-12 p-2" data-aos="zoom-out-down">
                                 <div class="card">
                                     <img src="images/p2.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -323,7 +398,7 @@
                                     </div>
                                   </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6 col-12 p-2">
+                            <div class="col-lg-3 col-sm-6 col-12 p-2" data-aos="zoom-out-down">
                                 <div class="card">
                                     <img src="images/p3.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -337,7 +412,7 @@
                                     </div>
                                   </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6 col-12 p-2">
+                            <div class="col-lg-3 col-sm-6 col-12 p-2" data-aos="zoom-out-down">
                                 <div class="card">
                                     <img src="images/p4.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -483,7 +558,7 @@
                     </div>
                 </div>
                 <hr style="color: whitesmoke;">
-                <p class="text-muted">Copyright © 2021 | All rights reserved. This design is created by <span>Vijul Malviya</span>.
+                <p class="text-muted">Copyright © 2021 | All rights reserved. This design is created by <span class="text-primary" >Vijul Malviya</span>.
 
                 </p>
             </div>
@@ -491,6 +566,7 @@
        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
